--- a/client/pom.xml
+++ b/client/pom.xml
@@ -13,6 +13,7 @@
     <artifactId>client</artifactId>
 
     <dependencies>
+        <!-- GWT -->
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
@@ -20,7 +21,6 @@
         <dependency>
             <groupId>com.google.gwt.inject</groupId>
             <artifactId>gin</artifactId>
-            <version>2.1.2</version>
         </dependency>
 
         <!-- GWTP -->
@@ -45,7 +45,6 @@
         <dependency>
             <groupId>org.vectomatic</groupId>
             <artifactId>lib-gwt-svg</artifactId>
-            <version>0.5.9</version>
         </dependency>
     </dependencies>
 
