--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,11 @@
     <properties>
         <gwt.version>2.7.0</gwt.version>
         <gwtp.version>1.5</gwtp.version>
-        <gsss.version>1.1-SNAPSHOT</gsss.version>
+        <gsss.version>1.1</gsss.version>
         <gwtquery.version>1.4.3</gwtquery.version>
+
+        <gwt-inject.version>2.1.2</gwt-inject.version>
+        <gwt-svg.version>0.5.9</gwt-svg.version>
 
         <guava.version>18.0</guava.version>
         <guice.version>3.0</guice.version>
@@ -93,6 +96,11 @@
                 <scope>compile</scope>
             </dependency>
             <dependency>
+                <groupId>com.google.gwt.inject</groupId>
+                <artifactId>gin</artifactId>
+                <version>${gwt-inject.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.google.inject.extensions</groupId>
                 <artifactId>guice-servlet</artifactId>
                 <version>${guice.version}</version>
@@ -117,6 +125,13 @@
                 <artifactId>servlet-api</artifactId>
                 <version>${servlet-api.version}</version>
                 <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.vectomatic</groupId>
+                <artifactId>lib-gwt-svg</artifactId>
+                <version>${gwt-svg.version}</version>
+                <scope>compile</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
