--- a/client/pom.xml
+++ b/client/pom.xml
@@ -30,6 +30,10 @@
             <groupId>com.google.gwt.inject</groupId>
             <artifactId>gin</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject.extensions</groupId>
+            <artifactId>guice-assistedinject</artifactId>
+        </dependency>
 
         <!-- GWTP -->
         <dependency>
