--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <packaging>pom</packaging>
 
     <properties>
+        <arcbees-common.version>1.3-SNAPSHOT</arcbees-common.version>
+
         <gwt.version>2.7.0</gwt.version>
         <gwtp.version>1.5</gwtp.version>
         <gsss.version>1.1</gsss.version>
@@ -60,6 +62,12 @@
                 <artifactId>common</artifactId>
                 <version>${project.version}</version>
                 <scope>compile</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.arcbees</groupId>
+                <artifactId>ui</artifactId>
+                <version>${arcbees-common.version}</version>
             </dependency>
 
             <dependency>
