Add gwt-stripe to pom and create StripePayment widget

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -22,6 +22,10 @@
             <groupId>com.arcbees</groupId>
             <artifactId>ui</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.arcbees.stripe</groupId>
+            <artifactId>gwt-stripe</artifactId>
+        </dependency>
 
         <!-- GWT -->
         <dependency>
