--- a/common/pom.xml
+++ b/common/pom.xml
@@ -11,6 +11,13 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>common</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <resources>
             <resource>
