Call stripe's servers to do an actual payment

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
