--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
         <gwtp.version>1.5</gwtp.version>
         <gsss.version>1.1</gsss.version>
         <gwtquery.version>1.4.3</gwtquery.version>
+
         <gwt-stripe.version>0.2.0</gwt-stripe.version>
+        <stripe-java.version>1.29.0</stripe-java.version>
 
         <gwt-inject.version>2.1.2</gwt-inject.version>
         <gwt-svg.version>0.5.9</gwt-svg.version>
@@ -71,10 +73,17 @@
                 <artifactId>ui</artifactId>
                 <version>${arcbees-common.version}</version>
             </dependency>
+
+            <!-- Payment -->
             <dependency>
                 <groupId>com.arcbees.stripe</groupId>
                 <artifactId>gwt-stripe</artifactId>
                 <version>${gwt-stripe.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.stripe</groupId>
+                <artifactId>stripe-java</artifactId>
+                <version>${stripe-java.version}</version>
             </dependency>
 
             <dependency>
