--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,15 @@
     <packaging>pom</packaging>
 
     <properties>
+        <java.version>1.7</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <maven-gae-plugin.version>0.9.5</maven-gae-plugin.version>
+
         <arcbees-common.version>1.3-SNAPSHOT</arcbees-common.version>
 
         <gwt.version>2.7.0</gwt.version>
+        <gae.version>1.9.28</gae.version>
         <gwtp.version>1.5</gwtp.version>
         <gsss.version>1.1</gsss.version>
         <gwtquery.version>1.4.3</gwtquery.version>
@@ -35,8 +41,9 @@
 
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
 
-        <java.version>1.7</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <gae.home>
+            ${settings.localRepository}/com/google/appengine/appengine-java-sdk/${gae.version}/appengine-java-sdk-${gae.version}
+        </gae.home>
     </properties>
 
     <modules>
@@ -241,5 +248,41 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+
+        <plugins>
+            <plugin>
+                <groupId>net.kindleit</groupId>
+                <artifactId>maven-gae-plugin</artifactId>
+                <version>${maven-gae-plugin.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>net.kindleit</groupId>
+                        <artifactId>gae-runtime</artifactId>
+                        <version>1.8.8</version>
+                        <type>pom</type>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <sdkDir>${gae.home}</sdkDir>
+                    <serverId>appengine-credentials</serverId>
+                    <splitJars>true</splitJars>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>install-server-jar</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>deploy</id>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 </project>
