--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <maven-gae-plugin.version>0.9.5</maven-gae-plugin.version>
+        <maven-gae-plugin.version>0.9.6</maven-gae-plugin.version>
+        <maven-gae-plugin-runtime.version>1.8.8</maven-gae-plugin-runtime.version>
 
         <arcbees-common.version>1.3-SNAPSHOT</arcbees-common.version>
 
@@ -258,7 +259,7 @@
                     <dependency>
                         <groupId>net.kindleit</groupId>
                         <artifactId>gae-runtime</artifactId>
-                        <version>1.8.8</version>
+                        <version>${maven-gae-plugin-runtime.version}</version>
                         <type>pom</type>
                     </dependency>
                 </dependencies>
