--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+        <maven-war-plugin.version>2.6</maven-war-plugin.version>
         <maven-gae-plugin.version>0.9.6</maven-gae-plugin.version>
         <maven-gae-plugin-runtime.version>1.8.8</maven-gae-plugin-runtime.version>
 
@@ -42,6 +43,7 @@
 
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
 
+        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
         <gae.home>
             ${settings.localRepository}/com/google/appengine/appengine-java-sdk/${gae.version}/appengine-java-sdk-${gae.version}
         </gae.home>
@@ -234,6 +236,9 @@
     </dependencies>
 
     <build>
+        <!--suppress MavenModelInspection -->
+        <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
+
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -251,6 +256,33 @@
         </pluginManagement>
 
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>${maven-war-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>exploded</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <webappDirectory>${webappDirectory}</webappDirectory>
+                    <webResources>
+                        <resource>
+                            <directory>src/main/webapp/WEB-INF</directory>
+                            <filtering>true</filtering>
+                            <includes>
+                                <include>appengine-web.xml</include>
+                            </includes>
+                            <targetPath>WEB-INF</targetPath>
+                        </resource>
+                    </webResources>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>net.kindleit</groupId>
                 <artifactId>maven-gae-plugin</artifactId>
