--- a/app/pom.xml
+++ b/app/pom.xml
@@ -9,6 +9,10 @@
     <packaging>war</packaging>
 
     <properties>
+        <gae.version>1.9.28</gae.version>
+        <maven-gae-plugin.version>0.9.6</maven-gae-plugin.version>
+        <maven-gae-plugin-runtime.version>1.8.8</maven-gae-plugin-runtime.version>
+
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
         <gwt-maven-plugin.version>2.7.0</gwt-maven-plugin.version>
         <maven-war-plugin.version>2.6</maven-war-plugin.version>
@@ -16,6 +20,10 @@
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
+
+        <gae.home>
+            ${settings.localRepository}/com/google/appengine/appengine-java-sdk/${gae.version}/appengine-java-sdk-${gae.version}
+        </gae.home>
     </properties>
 
     <dependencies>
@@ -96,6 +104,47 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>net.kindleit</groupId>
+                <artifactId>maven-gae-plugin</artifactId>
+                <version>${maven-gae-plugin.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>net.kindleit</groupId>
+                        <artifactId>gae-runtime</artifactId>
+                        <version>${maven-gae-plugin-runtime.version}</version>
+                        <type>pom</type>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <sdkDir>${gae.home}</sdkDir>
+                    <serverId>appengine-credentials</serverId>
+                    <splitJars>true</splitJars>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>install-server-jar</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>deploy</id>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>local-target</id>
+            <url>file://${project.build.directory}/distribution/release</url>
+        </repository>
+    </distributionManagement>
 </project>
