--- a/client/pom.xml
+++ b/client/pom.xml
@@ -88,6 +88,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava-gwt</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.seanchenxi.gwt</groupId>
+            <artifactId>gwt-storage</artifactId>
+            <version>1.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
