--- a/client/pom.xml
+++ b/client/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>gwt-user</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.nmorel.gwtjackson</groupId>
+            <artifactId>gwt-jackson</artifactId>
+        </dependency>
+
         <!-- DI -->
         <dependency>
             <groupId>com.google.gwt.inject</groupId>
