--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <gwtp.version>1.5</gwtp.version>
         <gsss.version>1.1</gsss.version>
         <gwtquery.version>1.4.3</gwtquery.version>
+        <gwt-jackson.version>0.9.0</gwt-jackson.version>
+        <jackson-annotations.version>2.6.0</jackson-annotations.version>
 
         <gwt-stripe.version>0.2.0</gwt-stripe.version>
         <stripe-java.version>1.29.0</stripe-java.version>
@@ -117,6 +119,17 @@
                 <artifactId>gwtquery</artifactId>
                 <version>${gwtquery.version}</version>
                 <scope>compile</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.nmorel.gwtjackson</groupId>
+                <artifactId>gwt-jackson</artifactId>
+                <version>${gwt-jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson-annotations.version}</version>
             </dependency>
 
             <dependency>
