--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <gwtquery.version>1.4.3</gwtquery.version>
         <gwt-jackson.version>0.9.0</gwt-jackson.version>
         <jackson-annotations.version>2.6.0</jackson-annotations.version>
+        <gwt-storage.version>1.3.0</gwt-storage.version>
 
         <gwt-stripe.version>0.2.0</gwt-stripe.version>
         <stripe-java.version>1.29.0</stripe-java.version>
@@ -130,6 +131,12 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-annotations</artifactId>
                 <version>${jackson-annotations.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.seanchenxi.gwt</groupId>
+                <artifactId>gwt-storage</artifactId>
+                <version>${gwt-storage.version}</version>
             </dependency>
 
             <dependency>
