--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,16 @@
                 <version>${gwtp.version}</version>
                 <scope>compile</scope>
             </dependency>
+            <dependency>
+                <groupId>com.gwtplatform</groupId>
+                <artifactId>gwtp-crawler-service</artifactId>
+                <version>${gwtp.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.gwtplatform</groupId>
+                <artifactId>gwtp-crawler</artifactId>
+                <version>${gwtp.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.arcbees.gss</groupId>
