--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <gwt.version>2.7.0</gwt.version>
         <gwtp.version>1.5</gwtp.version>
         <gsss.version>1.1</gsss.version>
-        <gwt-seo.version>0.1</gwt-seo.version>
+        <gwt-seo.version>0.2-SNAPSHOT</gwt-seo.version>
         <gwtquery.version>1.4.3</gwtquery.version>
         <gwt-jackson.version>0.9.0</gwt-jackson.version>
         <jackson-annotations.version>2.6.0</jackson-annotations.version>
