--- a/server/src/main/resources/com/arcbees/beestore/server/seo.properties
+++ b/server/src/main/resources/com/arcbees/beestore/server/seo.properties
@@ -1,3 +1,4 @@
 title=Beestore
 description=A GWTP example project. A case study showing GWTP''s features and how to use them. Made by Arcbees
 keywords=Arcbees, GWTP, Beestore, example, project
+image=http://store.arcbees.com/img/beestore_logo.png
