--- a/common/src/main/resources/com/arcbees/beestore/common/Seo.properties
+++ b/common/src/main/resources/com/arcbees/beestore/common/Seo.properties
@@ -2,3 +2,5 @@ title=Beestore
 description=A GWTP example project. A case study showing GWTP''s features and how to use them. Made by Arcbees
 keywords=Arcbees, GWTP, Beestore, example, project
 image=http://store.arcbees.com/img/beestore_logo.png
+imageWidth=651
+imageHeight=372
