--- a/app/pom.xml
+++ b/app/pom.xml
@@ -14,10 +14,10 @@
         <maven-gae-plugin-runtime.version>1.8.8</maven-gae-plugin-runtime.version>
 
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
-        <gwt-maven-plugin.version>2.7.0</gwt-maven-plugin.version>
+        <gwt-maven-plugin.version>2.8.0-beta1</gwt-maven-plugin.version>
         <maven-war-plugin.version>2.6</maven-war-plugin.version>
 
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
 
@@ -36,6 +36,12 @@
             <groupId>com.arcbees.beestore</groupId>
             <artifactId>client</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-dev</artifactId>
+            <version>2.8.0-beta1</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
