--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,16 @@
     <packaging>pom</packaging>
 
     <properties>
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <arcbees-common.version>1.3-SNAPSHOT</arcbees-common.version>
 
-        <gwt.version>2.7.0</gwt.version>
-        <gwtp.version>1.5</gwtp.version>
+        <gwt.version>2.8.0-beta1</gwt.version>
+        <gwtp.version>1.5.1</gwtp.version>
         <gsss.version>1.1</gsss.version>
         <gwt-seo.version>0.2-SNAPSHOT</gwt-seo.version>
-        <gwtquery.version>1.4.3</gwtquery.version>
+        <gwtquery.version>1.4.4-SNAPSHOT</gwtquery.version>
         <gwt-jackson.version>0.9.0</gwt-jackson.version>
         <jackson-annotations.version>2.6.0</jackson-annotations.version>
         <gwt-storage.version>1.3.0</gwt-storage.version>
@@ -28,7 +28,7 @@
         <gwt-svg.version>0.5.9</gwt-svg.version>
 
         <gin.version>2.1.2</gin.version>
-        <guava.version>18.0</guava.version>
+        <guava.version>20.0-SNAPSHOT</guava.version>
         <guice.version>3.0</guice.version>
         <velocity.version>1.7</velocity.version>
 
